[package]
authors = ["Vyacheslav Yamont <yamontv@gmail.com>"]
description = "Yet Another Doom in Rust"
name = "yadoom_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
minifb = { version = "0.28", default-features = false, features = ["x11"] }
anyhow = "1.0" 
glam = "0.30.3"
thiserror = "2.0.12"
byteorder = "1.5"
regex     = "1"
once_cell = "1"
bitflags = "2.9.1"
ordered-float = "5.0.0"
